# diamond_fem

./: .gitignore  CMakeLists.txt  Makefile
example/: main.cpp
include/analysis_task/: border.hpp  border_condition.hpp
include/geometry/: arc.hpp  constants.hpp  core.hpp  curve.hpp  geometry_fwd.hpp  interval.hpp  line.hpp  point.hpp  spatial_index.hpp  vec.hpp
include/meshing/: constraint_connector.hpp  create_mesh.hpp  exterior_triangle_remover.hpp  internal_boost_rtree.hpp  mesh.hpp  point_sparsener.hpp  point_stepper.hpp  triangulator.hpp
src/analysis_task/: border_condition.cpp
src/geometry/: arc.cpp  core.cpp  interval.cpp  line.cpp  point.cpp  utils.cpp  vec.cpp
src/meshing/: constraint_connector.cpp  create_mesh.cpp  exterior_triangle_remover.cpp  point_sparsener.cpp  point_stepper.cpp  triangulator.cpp
tests/geometry/: test_arc.cpp  test_interval.cpp  test_line.cpp
tests/meshing/: test_constraint_connector.cpp  test_point_sparsener.cpp  test_point_stepper.cpp
